--- a/style.css
+++ b/style.css
@@ -90,10 +90,55 @@ ul a:hover {
 .logo span {
     color:crimson ;
 }
+/* MODAL CONTENT FILM*/
+/* The Modal (background) */
+.modal2 {
+    display: none; 
+    position: fixed; 
+    z-index: 4; 
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content2 {
+    background-color: #312323;
+    margin: 20% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.grid-modal{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /* END HEADER ---- 1 container */
 
 .section-results {
     background: rgba(20, 21, 23, 1);
+    padding-right: 25px;
 }
 
 .input-client {
@@ -122,9 +167,15 @@ ul a:hover {
     border-radius: 8px 0px 0px 8px;
 }
 
-.swiper-results{
-    height: 40vh;
+.swiper-wrapper{
+    max-width: 100%;
+    height: 55vh;
     padding: 20px;
+}
+
+.swiper-slide{
+    width: 230px;
+    height: 351px;
 }
 
 .swiper-button-next-results ,
@@ -132,8 +183,13 @@ ul a:hover {
     width: 20px;
     font-size: 20px;
     color: #7e7a7a;
-    padding: 5px;
+    padding: 5px; 
 }
+.swiper-wrapper:not(:empty) + .swiper-button-prev-results,
+.swiper-wrapper:not(:empty) + .swiper-button-next-results {
+    display: block;
+}
+
 
 .swiper-button-prev-results:hover {
     background-color: #333;
