--- a/style.css
+++ b/style.css
@@ -172,6 +172,9 @@ ul a:hover {
     border-radius: 8px 0px 0px 8px;
 }
 
+.div-results{
+    display: none;
+}
 .swiper-wrapper{
     margin: 0 auto;
     max-width: 100%;
@@ -180,7 +183,9 @@ ul a:hover {
 }
 
 .swiper-results{
-    /* height: 55vh; */
+    position: relative;
+    width: 100%;
+    height: 55vh;
 }
 
 .swiper-latest {
