--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ ul a:hover {
     border-radius: 8px 0px 0px 8px;
 }
 
+
 .swiper-wrapper{
     margin: 0 auto;
     max-width: 100%;
@@ -357,7 +358,7 @@ font-weight: 400;
     z-index: 4; /* Sit on top */
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    background-color: rgba(8, 8, 8, 0.85); /* Black w/ opacity */
+    background-color: rgba(8, 8, 8, 0.7); /* Black w/ opacity */
     margin: 0% auto;
     top: 0;
 }
@@ -375,12 +376,11 @@ font-weight: 400;
 
 /* Modal content box */
 .modal-content {
-    background-color: #7a6a6a;
+    background: rgba(0, 0, 0, 1);
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
-    width: 30%; 
-    height: 50vh;
+    width: 410px; 
+    height: 608px;
 }
 
 /* Close button (X) */
