--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 *,
 *::before,
@@ -380,10 +381,30 @@ font-weight: 400;
     padding: 20px;
     width: 410px; 
     height: 608px;
+    text-align: center;
+    padding: 20px;
 }
 
-.singin-btn, .login-btn {
+.signin-btn, .login-btn {
     width: 145px;
+    height: 55px;
+    font-family: "Inria Sans";
+    color: blanchedalmond;
+    font-size: 24px;
+}
+.first-login{
+    border-radius: 0px 8px 8px 0px;
+}
+.login-btn{
+    background: rgba(204, 0, 0, 1);
+    border-radius: 8px 8px 8px 8px;
+
+}
+
+.signin-btn{
+    border-radius: 8px 0px 0px 8px;
+    color: #312323;
+
 }
 
 /* Close button (X) */
