--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ a {
 
 img {
     width: 100%;
+    object-fit: cover;
 }
 
 h1{
@@ -183,13 +184,13 @@ ul a:hover {
 .swiper-results{
     position: relative;
     width: 100%;
-    height: 55vh;
+    height: 570px;
 }
 
 .swiper-latest {
     position: relative;
     width: 100%;
-    height: 55vh; 
+    height: 570px; 
 }
 
 .swiper-slide {
@@ -200,7 +201,8 @@ ul a:hover {
 .img-div{
     position: absolute;
     z-index: 1;
-    height: 351px; 
+    height: 100%; 
+    object-fit: cover;
 }
 
 .hover-div{
@@ -216,6 +218,8 @@ ul a:hover {
 .img-div:hover,
 .img:hover{
     z-index: 0;
+    object-fit: cover;
+
 }
 
 .hover-div{
@@ -348,12 +352,12 @@ font-weight: 400;
 }
 
 .swiper-genre{
-    height: 55vh;
+    height: 570px;
 }
 
 /* MODAL */
 .modal {
-    /* display: none; Hidden by default */
+    /* display: none;  */
     position: fixed; /* Stay in place */
     z-index: 4; /* Sit on top */
     width: 100%; /* Full width */
@@ -369,7 +373,7 @@ font-weight: 400;
     border-radius: 60px;
 }
 
-#msgus , #msgem {
+#msgus , #msgem ,#msg-email{
     margin: 0 auto;
     display: none;
 }
@@ -377,48 +381,134 @@ font-weight: 400;
 /* Modal content box */
 .modal-content {
     background: rgba(0, 0, 0, 1);
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: 4% auto; /* 15% from the top and centered */
     padding: 20px;
     width: 410px; 
     height: 608px;
-    text-align: center;
     padding: 20px;
 }
 
+.header-login,
+.login,
+.signin{
+    margin-top: 20px;
+    padding: 0;
+}
+.signin{
+    
+}
+
+
+
+.login>a>label{
+    color: rgb(249, 248, 246);
+    float: left;
+    transform: translate(3px,-12px);
+    font-family: "Inter";
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#myCheckbox{
+    float: left;
+    transform: translateX(40px);
+    margin: 5px;
+    cursor: pointer;
+}
+
+#username,
+#password,
+#email,
+#confirm-password{
+    width: 290px;
+    height: 45px;
+    font-family: "Inter";
+    font-size: 16px;
+    color: #312323;
+    font-weight: 400;
+    padding: 10px;
+    margin: 5px;
+}
+
 .signin-btn, .login-btn {
-    width: 145px;
+    width: 150px;
     height: 55px;
     font-family: "Inria Sans";
-    color: blanchedalmond;
+    color: rgb(249, 248, 246);
     font-size: 24px;
+    transform: translateX(-5px);
 }
+
+.signin-btn:hover, .login-btn:hover {
+    background-color: #7e7a7a;
+    border-color: #7e7a7a;
+} 
 .first-login{
     border-radius: 0px 8px 8px 0px;
+    background: rgba(204, 0, 0, 1);
+    border-color: rgba(204, 0, 0, 1);
+    cursor: pointer;
+
 }
-.login-btn{
+
+.second-login{
+    width: 290px;
+    margin-top: 20px;
+}
+
+.second-login{
     background: rgba(204, 0, 0, 1);
     border-radius: 8px 8px 8px 8px;
-
+    cursor: pointer;
 }
 
 .signin-btn{
     border-radius: 8px 0px 0px 8px;
-    color: #312323;
-
+    color: rgb(248, 248, 247);
+    background-color: rgba(0, 0, 0, 1);
+    border-bottom: 1px solid #fbf9f9;
+    border-top: 1px solid #fbf9f9;
+    border-left: 1px solid #fbf9f9;
+    cursor: pointer;
 }
+
+#myModal>.modal-content>.login>a ,
+#myModal>.modal-content>.signin>a {
+    font-family: 'Inter';
+    font-weight: 400;
+    font-size: 16px;
+    text-transform: lowercase;
+    float: left;
+    cursor: pointer;
+    color:rgb(182, 35, 35);
+}
+
+#myModal>.modal-content>.login>a>:nth-child(2):hover
+{
+    color: #333;
+}
+
+#myModal>.modal-content>.login>:last-child{
+    color: aliceblue;
+}
+
+#myModal>.modal-content>.login>:last-child>.UP{
+    color:rgb(182, 35, 35);
+}
+
 
 /* Close button (X) */
 .close {
     color: #aaa;
     float: left;
-    transform: translate(-10px,-11px);
+    transform: translate(-5px,-20px);
     font-size: 28px;
     font-weight: bold;
 }
 
 .close:hover,
 .close:focus {
-    color: rgb(51, 54, 216);
+    color: rgb(169, 25, 25);
     text-decoration: none;
     cursor: pointer;
 }
