--- a/style.css
+++ b/style.css
@@ -37,8 +37,15 @@ p{
 }
 
 .hidden{
-    display: none;
+    display: none !important;
 }
+
+.signinBtnActive {
+    background-color: rgba(204, 0, 0, 1) !important;
+    border-color: rgba(204, 0, 0, 1) !important;
+}
+
+
 
 /* STYLE */
 
@@ -88,7 +95,7 @@ ul a:hover {
 }
 
 .logo:hover{
-    font-size: 17px;
+    font-size: 37px;
     color:#888;
 }
 
@@ -113,15 +120,17 @@ ul a:hover {
 /* Modal Content */
 .modal-content2 {
     background-color: #312323;
-    margin: 20% auto; 
+    margin: 8% auto; 
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 60%; 
+    max-height: 80%;
 }
 
 .grid-modal{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1.5fr 2fr;
+    align-items: center;
 }
 
 /* The Close Button */
@@ -137,6 +146,25 @@ ul a:hover {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.contentfilm{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.modal-movie-title{
+    font-weight: 700;
+    font-family: 'Inria Sans';
+    font-size: 28px;
+    color: rgba(204, 0, 0, 1);
+}
+
+.modal-movie-year{
+    font-family: 'Inria Sanss';
+    font-weight: 700;
+    color: rgba(233, 233, 233, 1);
 }
 
 /* END HEADER ---- 1 container */
@@ -381,29 +409,54 @@ font-weight: 400;
 /* Modal content box */
 .modal-content {
     background: rgba(0, 0, 0, 1);
-    margin: 4% auto; /* 15% from the top and centered */
+    margin: 5px auto; /* 15% from the top and centered */
     padding: 20px;
     width: 410px; 
-    height: 608px;
-    padding: 20px;
+    height: 600px;
 }
 
 .header-login,
-.login,
-.signin{
+.login{
     margin-top: 20px;
     padding: 0;
 }
 .signin{
-    
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
 }
 
+.signin>p:first-child{
+    margin-top: 20px;
+}
 
+#myCheckbox2{
+    float: left;
+    transform: translateX(-155px);
+    margin: 5px;
+    cursor: pointer;
+}
+
+.second-signin{
+    width: 290px !important;
+    border: 1px solid #e11818 !important;
+    border-radius: 8px 8px 8px 8px !important;
+    margin-left: 13px;
+    margin-top: 20px;
+    background-color: rgba(204, 0, 0, 1) !important;
+}
+
+.second-signin:hover{
+    background-color: #7e7a7a;
+}
+
+#myModal>.modal-content>.signin>a {
+    transform: translate(18px,-34px);
+}
 
 .login>a>label{
     color: rgb(249, 248, 246);
     float: left;
-    transform: translate(3px,-12px);
     font-family: "Inter";
     font-size: 16px;
     font-weight: 400;
@@ -411,13 +464,13 @@ font-weight: 400;
 
 #myCheckbox{
     float: left;
-    transform: translateX(40px);
+    transform: translate(10px,12px);
     margin: 5px;
     cursor: pointer;
 }
 
-#username,
-#password,
+.username,
+.password,
 #email,
 #confirm-password{
     width: 290px;
@@ -428,6 +481,7 @@ font-weight: 400;
     font-weight: 400;
     padding: 10px;
     margin: 5px;
+    cursor: pointer;
 }
 
 .signin-btn, .login-btn {
@@ -445,8 +499,8 @@ font-weight: 400;
 } 
 .first-login{
     border-radius: 0px 8px 8px 0px;
-    background: rgba(204, 0, 0, 1);
-    border-color: rgba(204, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 1);
+    background-color: rgba(0, 0, 0, 1);
     cursor: pointer;
 
 }
